# benchmark-workflow

./: .gitignore  Dockerfile.ner  Dockerfile.ocr  Dockerfile.temporalio  api_ner.py  api_ocr.py  docker-compose.yml  lancement_temporal.ipynb  pyproject.toml  utils.py
dynamicconfig/: development-sql.yaml
scripts/: setup-postgres-opensearch.sh
temporal_workflow/: activities.py  worker_all.py  worker_ml.py  worker_pdf.py  workflows.py
